--- a/sample.html
+++ b/sample.html
@@ -34,7 +34,7 @@
         const send = document.getElementById('send');
         send.addEventListener('click', () => {
             allMessages.push(input.value);
-            chat.push(allMessages);
+            chat.sync(allMessages);
             input.value = '';
         });
     </script>
